[tool.poetry]
name = "sound_source_separation"
version = "0.1.0"
description = ""
authors = ["to-lz1 <m.toriyama000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyroomacoustics = "^0.4.1"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
sounddevice = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
